{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 356,
  "lineage": "0ebca078-7ebd-4680-65d1-bbae431dbfbd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:loadbalancer/app/app-alb/3238405093f77143",
            "arn_suffix": "app/app-alb/3238405093f77143",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-1012257612.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:loadbalancer/app/app-alb/3238405093f77143",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e6b2c08d01d9b90"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004b61c6b1c9f6331"
              },
              {
                "subnet_id": "subnet-0f1c1e954a6689bda"
              }
            ],
            "subnets": [
              "subnet-004b61c6b1c9f6331",
              "subnet-0f1c1e954a6689bda"
            ],
            "vpc_id": "vpc-0dc3c60c14b720430",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:listener/app/app-alb/3238405093f77143/50ac437ef1bbfc49",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:targetgroup/app-tg/4cfaf50472936761",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:listener/app/app-alb/3238405093f77143/50ac437ef1bbfc49",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:loadbalancer/app/app-alb/3238405093f77143",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:targetgroup/app-tg/4cfaf50472936761",
            "arn_suffix": "targetgroup/app-tg/4cfaf50472936761",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:326779754677:targetgroup/app-tg/4cfaf50472936761",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:326779754677:loadbalancer/app/app-alb/3238405093f77143"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:security-group/sg-09e6b2c08d01d9b90",
            "description": "Allow HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e6b2c08d01d9b90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "326779754677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:security-group/sg-0308fed05747d231c",
            "description": "Allow HTTP from ALB and SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0308fed05747d231c",
            "ingress": [
              {
                "cidr_blocks": [
                  "156.218.157.237/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e6b2c08d01d9b90"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "326779754677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.nadine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mysql_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3680862080",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0308fed05747d231c",
            "security_group_rule_id": "sgr-0bee668f44d97ab36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nadine_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090345bd93b109f4f",
            "arn": "arn:aws:ec2:eu-north-1:326779754677:elastic-ip/eipalloc-090345bd93b109f4f",
            "association_id": "eipassoc-06fda04eb3c48c6f5",
            "domain": "vpc",
            "id": "eipalloc-090345bd93b109f4f",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0e8855c0d010a73d5",
            "private_dns": "ip-10-0-0-224.eu-north-1.compute.internal",
            "private_ip": "10.0.0.224",
            "public_dns": "ec2-13-53-153-173.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.153.173",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nadine-project-nat-eip",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-nat-eip",
              "Project": "nadine-project"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nadine_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:internet-gateway/igw-0e9769aca3c886b13",
            "id": "igw-0e9769aca3c886b13",
            "owner_id": "326779754677",
            "tags": {
              "Name": "nadine-project-igw",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-igw",
              "Project": "nadine-project"
            },
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nadine_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090345bd93b109f4f",
            "association_id": "eipassoc-06fda04eb3c48c6f5",
            "connectivity_type": "public",
            "id": "nat-05025a60b3396841a",
            "network_interface_id": "eni-0e8855c0d010a73d5",
            "private_ip": "10.0.0.224",
            "public_ip": "13.53.153.173",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-004b61c6b1c9f6331",
            "tags": {
              "Name": "nadine-project-nat",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-nat",
              "Project": "nadine-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nadine_nat",
            "module.vpc.aws_subnet.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nadine_private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0175ea010ef05b9f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05025a60b3396841a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0175ea010ef05b9f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nadine_nat",
            "module.vpc.aws_nat_gateway.nadine_nat",
            "module.vpc.aws_route_table.nadine_private",
            "module.vpc.aws_subnet.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nadine_public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e9769aca3c886b13",
            "id": "r-rtb-0039602ed0ac0bb7d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0039602ed0ac0bb7d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.nadine_igw",
            "module.vpc.aws_route_table.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nadine_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:route-table/rtb-0175ea010ef05b9f9",
            "id": "rtb-0175ea010ef05b9f9",
            "owner_id": "326779754677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05025a60b3396841a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nadine-project-private-rt",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-private-rt",
              "Project": "nadine-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nadine_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:route-table/rtb-0039602ed0ac0bb7d",
            "id": "rtb-0039602ed0ac0bb7d",
            "owner_id": "326779754677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9769aca3c886b13",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nadine-project-public-rt",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-public-rt",
              "Project": "nadine-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nadine_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0681f7d67f751f071",
            "route_table_id": "rtb-0175ea010ef05b9f9",
            "subnet_id": "subnet-0ef3cedc23bbdedd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.nadine_private",
            "module.vpc.aws_subnet.nadine_private",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078e9d4f14ee815cb",
            "route_table_id": "rtb-0175ea010ef05b9f9",
            "subnet_id": "subnet-0889a9cfbf0407408"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.nadine_private",
            "module.vpc.aws_subnet.nadine_private",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nadine_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b1688ebbf890fce",
            "route_table_id": "rtb-0039602ed0ac0bb7d",
            "subnet_id": "subnet-004b61c6b1c9f6331"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.nadine_public",
            "module.vpc.aws_subnet.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d631037dff50bd7c",
            "route_table_id": "rtb-0039602ed0ac0bb7d",
            "subnet_id": "subnet-0f1c1e954a6689bda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.nadine_public",
            "module.vpc.aws_subnet.nadine_public",
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nadine_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:subnet/subnet-0ef3cedc23bbdedd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef3cedc23bbdedd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nadine-project-private-1",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-private-1",
              "Project": "nadine-project"
            },
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:subnet/subnet-0889a9cfbf0407408",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889a9cfbf0407408",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nadine-project-private-2",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-private-2",
              "Project": "nadine-project"
            },
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nadine_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:subnet/subnet-004b61c6b1c9f6331",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004b61c6b1c9f6331",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nadine-project-public-1",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-public-1",
              "Project": "nadine-project"
            },
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:subnet/subnet-0f1c1e954a6689bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1c1e954a6689bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "326779754677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nadine-project-public-2",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-public-2",
              "Project": "nadine-project"
            },
            "vpc_id": "vpc-0dc3c60c14b720430"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.nadine_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nadine_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:326779754677:vpc/vpc-0dc3c60c14b720430",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064d2c89d28026972",
            "default_route_table_id": "rtb-05d192b8475116d8b",
            "default_security_group_id": "sg-0646e3bfe2b56004a",
            "dhcp_options_id": "dopt-01e99c3b2544a2d88",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc3c60c14b720430",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d192b8475116d8b",
            "owner_id": "326779754677",
            "tags": {
              "Name": "nadine-project-vpc",
              "Project": "nadine-project"
            },
            "tags_all": {
              "Name": "nadine-project-vpc",
              "Project": "nadine-project"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}